testdata/parser/negative/30.pdl
#version 100

int main(int a) {
    int x = 5;
    int y = x + 5;
    int z = z; // now allowed
}